Filters on images instead of div box

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,7 @@
   <head>
   </head>
   <body>
-    <div id="header"></div>
+    <div id="gallery"></div>
     <script type="text/javascript" src="bundle.js"></script>
   </body>
 </html>
